# pisalka

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
benchmarks/docker/: bench.sh
benchmarks/scripts/: bench_get.sh  bench_put.sh  bench_put_matrix.sh  bench_put_multi.sh  generate_arrow.sh
benchmarks/tools/: bench_coordinator.rs  bench_get.rs  bench_put.rs  bench_put_multi.rs  coordinator_action.rs  coordinator_query.rs
benchmarks/tools/common/: flight_uri.rs  mod.rs  profile.rs
coordinator-java/: Dockerfile  pom.xml
coordinator-java/src/main/java/com/arrowflight/coordinator/: ArrowSchemaConstraints.java  BaseHostnameMiddleware.java  CapabilitySigner.java  ClientTable.java  Config.java  CoordinatorApplication.java  CoordinatorErrorFormatter.java  CoordinatorException.java  CoordinatorFlightProducer.java  CoordinatorLog.java  CoordinatorMetadataStore.java  CoordinatorMetrics.java  CoordinatorMetricsServer.java  CoordinatorMigrations.java  CoordinatorRequestLog.java  CoordinatorService.java  HttpSupport.java  IcebergCommitter.java  IcebergSchemaPlanner.java  Json.java  ObjectStoreCleaner.java  SqlPlanner.java  TrinoClient.java  TrinoDdlPlanner.java  UploadCleanupService.java  UploadFlavor.java  WorkerEndpointDiscovery.java  WorkerEndpointRewrite.java  WorkerFlightUri.java  WorkerRegistryCleanupService.java
coordinator-java/src/main/resources/db/migration/: V1__worker_metadata.sql  V3__drop_unused_metadata_columns.sql  V5__worker_selection_grace.sql  V6__upload_flavors_and_put_reservations.sql  V7__expired_upload_cleanup.sql
coordinator-java/src/test/java/com/arrowflight/coordinator/: CoordinatorErrorFormatterTest.java  UploadFlavorTest.java
db/migrations/: 0001_worker_metadata.sql  0002_coordinator_query_registry.sql  0003_upload_commit_metadata.sql  0004_worker_client_endpoints.sql
dev/: bench-docker.sh  bench_get.sh  bench_put.sh  bench_put_matrix.sh  coordinator-smoke.sh  e2e-read-table.sh  e2e-write-table.sh  e2e_read_table.py  e2e_write_table.py  generate_arrow.sh  server-local.sh  smoke.sh  up.sh
e2e/tools/: create_schema.rs  generate_arrow.rs  read_table.rs  write_table.rs
e2e/tools/common/: client_config.rs
hive/conf/: core-site.xml
src/: admission.rs  capability.rs  config.rs  flight_service.rs  lib.rs  logging.rs  main.rs  metadata_store.rs  metrics.rs  put_model.rs  resource.rs  ticket.rs  util.rs  worker_status.rs
trino/: init_schema.py  run_sql.py
trino/catalog/: iceberg.properties
