[package]
name = "arrow-flight-s3-mvp"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "flight-server"
path = "src/main.rs"

[[bin]]
name = "gen-arrow"
path = "src/bin/gen_arrow.rs"

[[bin]]
name = "bench-put"
path = "src/bin/bench_put.rs"

[[bin]]
name = "bench-get"
path = "src/bin/bench_get.rs"

[dependencies]
anyhow = "1"
arrow-array = "=58.3.0"
arrow-flight = "=58.3.0"
arrow-ipc = "=58.3.0"
arrow-schema = "=58.3.0"
bytes = "1"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
object_store = { version = "=0.13.2", features = ["aws"] }
parquet = { version = "=58.3.0", features = ["async", "object_store"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.45", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }
tonic = { version = "0.14", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
