[package]
name = "arrow-flight-s3-mvp"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "flight-server"
path = "src/main.rs"

[[bin]]
name = "gen-arrow"
path = "benchmarks/tools/gen_arrow.rs"

[[bin]]
name = "bench-put"
path = "benchmarks/tools/bench_put.rs"

[[bin]]
name = "bench-put-multi"
path = "benchmarks/tools/bench_put_multi.rs"

[[bin]]
name = "bench-get"
path = "benchmarks/tools/bench_get.rs"

[[bin]]
name = "bench-coordinator"
path = "benchmarks/tools/bench_coordinator.rs"

[[bin]]
name = "coordinator-query"
path = "benchmarks/tools/coordinator_query.rs"

[dependencies]
anyhow = "1"
arrow-array = "=58.3.0"
arrow-flight = "=58.3.0"
arrow-ipc = "=58.3.0"
arrow-schema = "=58.3.0"
base64 = "0.22"
bytes = "1"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
hmac = "0.13"
object_store = { version = "=0.13.2", features = ["aws"] }
parquet = { version = "=58.3.0", features = ["async", "object_store"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1.45", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tonic = { version = "0.14", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
