[package]
name = "arrow-flight-s3-mvp"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "flight-server"
path = "src/main.rs"

[[bin]]
name = "e2e-generate"
path = "e2e/tools/generate_arrow.rs"

[[bin]]
name = "e2e-write"
path = "e2e/tools/write_table.rs"

[[bin]]
name = "e2e-read"
path = "e2e/tools/read_table.rs"

[[bin]]
name = "e2e-create-schema"
path = "e2e/tools/create_schema.rs"

[dependencies]
anyhow = "1"
arrow-array = "=58.3.0"
arrow-cast = { version = "=58.3.0", features = ["prettyprint"] }
arrow-flight = "=58.3.0"
arrow-ipc = "=58.3.0"
arrow-schema = "=58.3.0"
base64 = "0.22"
bytes = "1"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
hmac = "0.13"
object_store = { version = "=0.13.2", features = ["aws"] }
parquet = { version = "=58.3.0", features = ["async", "object_store"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1.45", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tokio-postgres-rustls = { version = "0.14", features = ["native-certs", "ring"] }
tonic = { version = "0.14", features = ["transport", "tls-ring", "tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
